--- a/index.html
+++ b/index.html
@@ -342,9 +342,6 @@
               <li class="portfolio__filter-item">
                 <button class="portfolio__filter-button">PRODUCT-DESIGN</button>
               </li>
-              <!-- <li class="portfolio__filter-item">
-                <button class="portfolio__filter-button">BRANDING</button>
-              </li> -->
               <li class="portfolio__filter-item">
                 <button class="portfolio__filter-button">WEB-DESIGN</button>
               </li>
@@ -366,98 +363,102 @@
               </li>
             </ul>
           </div>
-          <ul class="portfolio__list" portfolio-list>
-            <li class="portfolio__item ui-ux">
-              <a class="portfolio__item-link link" href="#">
-                <div class="portfolio__item-img-wrap">
-                  <img src="./images/portfolio.jpg" alt="" class="portfolio__item-img" />
-                  <div class="portfolio__item-overlay">
-                    <h3 class="portfolio__item-title">Mobile desing</h3>
-                    <p class="portfolio__item-subtitle">UI/UX Design</p>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li class="portfolio__item product-design">
-              <a class="portfolio__item-link link" href="#">
-                <div class="portfolio__item-img-wrap">
-                  <img
-                    src="./images/portfolio2.jpg"
-                    width="364"
-                    height="249"
-                    alt=""
-                    class="portfolio__item-img"
-                  />
-                  <div class="portfolio__item-overlay">
-                    <h3 class="portfolio__item-title">Mobile desing</h3>
-                    <p class="portfolio__item-subtitle">UI/UX Design</p>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li class="portfolio__item web-design">
-              <a class="portfolio__item-link link" href="#">
-                <div class="portfolio__item-img-wrap">
-                  <img
-                    src="./images/portfolio3.jpg"
-                    width="364"
-                    height="249"
-                    alt=""
-                    class="portfolio__item-img"
-                  />
-                  <div class="portfolio__item-overlay">
-                    <h3 class="portfolio__item-title">Mobile desing</h3>
-                    <p class="portfolio__item-subtitle">UI/UX Design</p>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li class="portfolio__item ui-ux">
-              <a class="portfolio__item-link link" href="#">
-                <div class="portfolio__item-img-wrap">
-                  <img src="./images/portfolio.jpg" alt="" class="portfolio__item-img" />
-                  <div class="portfolio__item-overlay">
-                    <h3 class="portfolio__item-title">Mobile desing</h3>
-                    <p class="portfolio__item-subtitle">UI/UX Design</p>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li class="portfolio__item product-design">
-              <a class="portfolio__item-link link" href="#">
-                <div class="portfolio__item-img-wrap">
-                  <img
-                    src="./images/portfolio2.jpg"
-                    width="364"
-                    height="249"
-                    alt=""
-                    class="portfolio__item-img"
-                  />
-                  <div class="portfolio__item-overlay">
-                    <h3 class="portfolio__item-title">Mobile desing</h3>
-                    <p class="portfolio__item-subtitle">UI/UX Design</p>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li class="portfolio__item web-design">
-              <a class="portfolio__item-link link" href="#">
-                <div class="portfolio__item-img-wrap">
-                  <img
-                    src="./images/portfolio3.jpg"
-                    width="364"
-                    height="249"
-                    alt=""
-                    class="portfolio__item-img"
-                  />
-                  <div class="portfolio__item-overlay">
-                    <h3 class="portfolio__item-title">Mobile desing</h3>
-                    <p class="portfolio__item-subtitle">UI/UX Design</p>
-                  </div>
-                </div>
-              </a>
-            </li>
-          </ul>
+          <div class="portfolio__wrapper">
+            <div class="portfolio-slider swiper-container">
+              <ul class="portfolio__list portfolio-slider__wrapper swiper-wrapper" portfolio-list>
+                <li class="portfolio__item ui-ux">
+                  <a class="portfolio__item-link link" href="#">
+                    <div class="portfolio__item-img-wrap">
+                      <img src="./images/portfolio.jpg" alt="" class="portfolio__item-img" />
+                      <div class="portfolio__item-overlay">
+                        <h3 class="portfolio__item-title">Mobile desing</h3>
+                        <p class="portfolio__item-subtitle">UI/UX Design</p>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li class="portfolio__item product-design">
+                  <a class="portfolio__item-link link" href="#">
+                    <div class="portfolio__item-img-wrap">
+                      <img
+                        src="./images/portfolio2.jpg"
+                        width="364"
+                        height="249"
+                        alt=""
+                        class="portfolio__item-img"
+                      />
+                      <div class="portfolio__item-overlay">
+                        <h3 class="portfolio__item-title">Mobile desing</h3>
+                        <p class="portfolio__item-subtitle">UI/UX Design</p>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li class="portfolio__item web-design">
+                  <a class="portfolio__item-link link" href="#">
+                    <div class="portfolio__item-img-wrap">
+                      <img
+                        src="./images/portfolio3.jpg"
+                        width="364"
+                        height="249"
+                        alt=""
+                        class="portfolio__item-img"
+                      />
+                      <div class="portfolio__item-overlay">
+                        <h3 class="portfolio__item-title">Mobile desing</h3>
+                        <p class="portfolio__item-subtitle">UI/UX Design</p>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li class="portfolio__item ui-ux">
+                  <a class="portfolio__item-link link" href="#">
+                    <div class="portfolio__item-img-wrap">
+                      <img src="./images/portfolio.jpg" alt="" class="portfolio__item-img" />
+                      <div class="portfolio__item-overlay">
+                        <h3 class="portfolio__item-title">Mobile desing</h3>
+                        <p class="portfolio__item-subtitle">UI/UX Design</p>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li class="portfolio__item product-design">
+                  <a class="portfolio__item-link link" href="#">
+                    <div class="portfolio__item-img-wrap">
+                      <img
+                        src="./images/portfolio2.jpg"
+                        width="364"
+                        height="249"
+                        alt=""
+                        class="portfolio__item-img"
+                      />
+                      <div class="portfolio__item-overlay">
+                        <h3 class="portfolio__item-title">Mobile desing</h3>
+                        <p class="portfolio__item-subtitle">UI/UX Design</p>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li class="portfolio__item web-design">
+                  <a class="portfolio__item-link link" href="#">
+                    <div class="portfolio__item-img-wrap">
+                      <img
+                        src="./images/portfolio3.jpg"
+                        width="364"
+                        height="249"
+                        alt=""
+                        class="portfolio__item-img"
+                      />
+                      <div class="portfolio__item-overlay">
+                        <h3 class="portfolio__item-title">Mobile desing</h3>
+                        <p class="portfolio__item-subtitle">UI/UX Design</p>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
       <section class="testimonial section">
@@ -515,18 +516,18 @@
                     </p>
                   </div>
                 </div>
-                <div class="swiper-pagination"></div>
+                <div class="testimonial-swiper-pagination"></div>
               </div>
               <ul class="pagination pagination--to-end">
                 <li class="pagination-item">
-                  <button class="pagination-btn btn-prev">
+                  <button class="pagination-btn testimonial-btn-prev">
                     <svg class="pagination-icon" width="20" height="20">
                       <use href="./images/symbol-defs.svg#icon-left-arrow"></use>
                     </svg>
                   </button>
                 </li>
                 <li class="pagination-item">
-                  <button class="pagination-btn btn-next">
+                  <button class="pagination-btn testimonial-btn-next">
                     <svg class="pagination-icon" width="20" height="20">
                       <use href="./images/symbol-defs.svg#icon-right-arrow"></use>
                     </svg>
