--- a/index.html
+++ b/index.html
@@ -348,14 +348,14 @@
             </ul>
             <ul class="pagination">
               <li class="pagination-item">
-                <button class="pagination-btn">
+                <button class="pagination-btn portfolio-btn-prev">
                   <svg class="pagination-icon" width="20" height="20">
                     <use href="./images/symbol-defs.svg#icon-left-arrow"></use>
                   </svg>
                 </button>
               </li>
               <li class="pagination-item">
-                <button class="pagination-btn">
+                <button class="pagination-btn portfolio-btn-next">
                   <svg class="pagination-icon" width="20" height="20">
                     <use href="./images/symbol-defs.svg#icon-right-arrow"></use>
                   </svg>
@@ -366,7 +366,7 @@
           <div class="portfolio__wrapper">
             <div class="portfolio-slider swiper-container">
               <ul class="portfolio__list portfolio-slider__wrapper swiper-wrapper" portfolio-list>
-                <li class="portfolio__item ui-ux">
+                <li class="portfolio__item swiper-slide ui-ux">
                   <a class="portfolio__item-link link" href="#">
                     <div class="portfolio__item-img-wrap">
                       <img src="./images/portfolio.jpg" alt="" class="portfolio__item-img" />
@@ -377,7 +377,7 @@
                     </div>
                   </a>
                 </li>
-                <li class="portfolio__item product-design">
+                <li class="portfolio__item swiper-slide product-design">
                   <a class="portfolio__item-link link" href="#">
                     <div class="portfolio__item-img-wrap">
                       <img
@@ -394,7 +394,7 @@
                     </div>
                   </a>
                 </li>
-                <li class="portfolio__item web-design">
+                <li class="portfolio__item swiper-slide web-design">
                   <a class="portfolio__item-link link" href="#">
                     <div class="portfolio__item-img-wrap">
                       <img
@@ -411,7 +411,7 @@
                     </div>
                   </a>
                 </li>
-                <li class="portfolio__item ui-ux">
+                <li class="portfolio__item swiper-slide ui-ux">
                   <a class="portfolio__item-link link" href="#">
                     <div class="portfolio__item-img-wrap">
                       <img src="./images/portfolio.jpg" alt="" class="portfolio__item-img" />
@@ -422,7 +422,7 @@
                     </div>
                   </a>
                 </li>
-                <li class="portfolio__item product-design">
+                <li class="portfolio__item swiper-slide product-design">
                   <a class="portfolio__item-link link" href="#">
                     <div class="portfolio__item-img-wrap">
                       <img
@@ -439,7 +439,7 @@
                     </div>
                   </a>
                 </li>
-                <li class="portfolio__item web-design">
+                <li class="portfolio__item swiper-slide web-design">
                   <a class="portfolio__item-link link" href="#">
                     <div class="portfolio__item-img-wrap">
                       <img
@@ -457,6 +457,7 @@
                   </a>
                 </li>
               </ul>
+              <div class="portfolio-swiper-pagination swiper-pagination"></div>
             </div>
           </div>
         </div>
@@ -516,7 +517,7 @@
                     </p>
                   </div>
                 </div>
-                <div class="testimonial-swiper-pagination"></div>
+                <div class="testimonial-swiper-pagination swiper-pagination"></div>
               </div>
               <ul class="pagination pagination--to-end">
                 <li class="pagination-item">
