portfolio-is-done

--- a/index.html
+++ b/index.html
@@ -330,22 +330,6 @@
         <div class="container">
           <div class="portfolio__content">
             <h2 class="title"><span class="title-accent">03</span>portfolio</h2>
-            <ul class="portfolio__filter">
-              <li class="portfolio__filter-item">
-                <button class="portfolio__filter-button portfolio__filter-button--current">
-                  ALL
-                </button>
-              </li>
-              <li class="portfolio__filter-item">
-                <button class="portfolio__filter-button">ui-ux</button>
-              </li>
-              <li class="portfolio__filter-item">
-                <button class="portfolio__filter-button">PRODUCT-DESIGN</button>
-              </li>
-              <li class="portfolio__filter-item">
-                <button class="portfolio__filter-button">WEB-DESIGN</button>
-              </li>
-            </ul>
             <ul class="pagination">
               <li class="pagination-item">
                 <button class="pagination-btn portfolio-btn-prev">
@@ -370,10 +354,16 @@
                   <a class="portfolio__item-link link" href="#">
                     <div class="portfolio__item-img-wrap">
                       <img src="./images/portfolio.jpg" alt="" class="portfolio__item-img" />
-                      <div class="portfolio__item-overlay">
-                        <h3 class="portfolio__item-title">Mobile desing</h3>
-                        <p class="portfolio__item-subtitle">UI/UX Design</p>
-                      </div>
+                      <p class="portfolio__item-overlay">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel voluptatibus
+                        obcaecati a quam non perferendis laboriosam maiores modi laborum mollitia
+                        natus possimus minima, soluta recusandae illum reiciendis! Corporis,
+                        repellat! Repellat.
+                      </p>
+                    </div>
+                    <div class="portfolio__item-content">
+                      <h3 class="portfolio__item-title">Mobile desing</h3>
+                      <p class="portfolio__item-subtitle">UI/UX Design</p>
                     </div>
                   </a>
                 </li>
@@ -387,10 +377,16 @@
                         alt=""
                         class="portfolio__item-img"
                       />
-                      <div class="portfolio__item-overlay">
-                        <h3 class="portfolio__item-title">Mobile desing</h3>
-                        <p class="portfolio__item-subtitle">UI/UX Design</p>
-                      </div>
+                      <p class="portfolio__item-overlay">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel voluptatibus
+                        obcaecati a quam non perferendis laboriosam maiores modi laborum mollitia
+                        natus possimus minima, soluta recusandae illum reiciendis! Corporis,
+                        repellat! Repellat.
+                      </p>
+                    </div>
+                    <div class="portfolio__item-content">
+                      <h3 class="portfolio__item-title">Mobile desing</h3>
+                      <p class="portfolio__item-subtitle">UI/UX Design</p>
                     </div>
                   </a>
                 </li>
@@ -404,10 +400,16 @@
                         alt=""
                         class="portfolio__item-img"
                       />
-                      <div class="portfolio__item-overlay">
-                        <h3 class="portfolio__item-title">Mobile desing</h3>
-                        <p class="portfolio__item-subtitle">UI/UX Design</p>
-                      </div>
+                      <p class="portfolio__item-overlay">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel voluptatibus
+                        obcaecati a quam non perferendis laboriosam maiores modi laborum mollitia
+                        natus possimus minima, soluta recusandae illum reiciendis! Corporis,
+                        repellat! Repellat.
+                      </p>
+                    </div>
+                    <div class="portfolio__item-content">
+                      <h3 class="portfolio__item-title">Mobile desing</h3>
+                      <p class="portfolio__item-subtitle">UI/UX Design</p>
                     </div>
                   </a>
                 </li>
@@ -415,10 +417,16 @@
                   <a class="portfolio__item-link link" href="#">
                     <div class="portfolio__item-img-wrap">
                       <img src="./images/portfolio.jpg" alt="" class="portfolio__item-img" />
-                      <div class="portfolio__item-overlay">
-                        <h3 class="portfolio__item-title">Mobile desing</h3>
-                        <p class="portfolio__item-subtitle">UI/UX Design</p>
-                      </div>
+                      <p class="portfolio__item-overlay">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel voluptatibus
+                        obcaecati a quam non perferendis laboriosam maiores modi laborum mollitia
+                        natus possimus minima, soluta recusandae illum reiciendis! Corporis,
+                        repellat! Repellat.
+                      </p>
+                    </div>
+                    <div class="portfolio__item-content">
+                      <h3 class="portfolio__item-title">Mobile desing</h3>
+                      <p class="portfolio__item-subtitle">UI/UX Design</p>
                     </div>
                   </a>
                 </li>
@@ -432,10 +440,16 @@
                         alt=""
                         class="portfolio__item-img"
                       />
-                      <div class="portfolio__item-overlay">
-                        <h3 class="portfolio__item-title">Mobile desing</h3>
-                        <p class="portfolio__item-subtitle">UI/UX Design</p>
-                      </div>
+                      <p class="portfolio__item-overlay">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel voluptatibus
+                        obcaecati a quam non perferendis laboriosam maiores modi laborum mollitia
+                        natus possimus minima, soluta recusandae illum reiciendis! Corporis,
+                        repellat! Repellat.
+                      </p>
+                    </div>
+                    <div class="portfolio__item-content">
+                      <h3 class="portfolio__item-title">Mobile desing</h3>
+                      <p class="portfolio__item-subtitle">UI/UX Design</p>
                     </div>
                   </a>
                 </li>
@@ -449,10 +463,16 @@
                         alt=""
                         class="portfolio__item-img"
                       />
-                      <div class="portfolio__item-overlay">
-                        <h3 class="portfolio__item-title">Mobile desing</h3>
-                        <p class="portfolio__item-subtitle">UI/UX Design</p>
-                      </div>
+                      <p class="portfolio__item-overlay">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel voluptatibus
+                        obcaecati a quam non perferendis laboriosam maiores modi laborum mollitia
+                        natus possimus minima, soluta recusandae illum reiciendis! Corporis,
+                        repellat! Repellat.
+                      </p>
+                    </div>
+                    <div class="portfolio__item-content">
+                      <h3 class="portfolio__item-title">Mobile desing</h3>
+                      <p class="portfolio__item-subtitle">UI/UX Design</p>
                     </div>
                   </a>
                 </li>
