--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <li class="socials__item">
                   <a
                     class="socials__item-link link"
-                    href="#"
+                    href="https://t.me/lexandrOl"
                     target="_blank"
                     rel="noopener noreferrer nofollow"
                   >
@@ -81,7 +81,7 @@
                 <li class="socials__item">
                   <a
                     class="socials__item-link link"
-                    href="#"
+                    href="https://github.com/MoskaletsOleksandr"
                     target="_blank"
                     rel="noopener noreferrer nofollow"
                   >
@@ -93,7 +93,7 @@
                 <li class="socials__item">
                   <a
                     class="socials__item-link link"
-                    href="#"
+                    href="www.linkedin.com/in/oleksandr-moskalets"
                     target="_blank"
                     rel="noopener noreferrer nofollow"
                   >
@@ -105,7 +105,7 @@
                 <li class="socials__item">
                   <a
                     class="socials__item-link link"
-                    href="#"
+                    href="https://www.instagram.com/batyasanych"
                     target="_blank"
                     rel="noopener noreferrer nofollow"
                   >
@@ -135,7 +135,7 @@
               <li class="socials__item">
                 <a
                   class="socials__item-link link"
-                  href="#"
+                  href="https://t.me/lexandrOl"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
                 >
@@ -147,7 +147,7 @@
               <li class="socials__item">
                 <a
                   class="socials__item-link link"
-                  href="#"
+                  href="https://github.com/MoskaletsOleksandr"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
                 >
@@ -159,7 +159,7 @@
               <li class="socials__item">
                 <a
                   class="socials__item-link link"
-                  href="#"
+                  href="www.linkedin.com/in/oleksandr-moskalets"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
                 >
@@ -171,7 +171,7 @@
               <li class="socials__item">
                 <a
                   class="socials__item-link link"
-                  href="#"
+                  href="https://www.instagram.com/batyasanych"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
                 >
@@ -607,7 +607,7 @@
             <li class="socials__item">
               <a
                 class="socials__item-link link"
-                href="#"
+                href="https://t.me/lexandrOl"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -619,7 +619,7 @@
             <li class="socials__item">
               <a
                 class="socials__item-link link"
-                href="#"
+                href="https://github.com/MoskaletsOleksandr"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -631,7 +631,7 @@
             <li class="socials__item">
               <a
                 class="socials__item-link link"
-                href="#"
+                href="www.linkedin.com/in/oleksandr-moskalets"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -643,7 +643,7 @@
             <li class="socials__item">
               <a
                 class="socials__item-link link"
-                href="#"
+                href="https://www.instagram.com/batyasanych"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
